Changes
=======

0.2 (unreleased)
----------------

- Package names are case sensitive now.


0.1 (2010-08-13)
----------------

- First internal test release.